--- a/KHE/Podfile
+++ b/KHE/Podfile
@@ -7,6 +7,8 @@ target 'KHE' do
   pod 'Alamofire', '~> 1.3'
   pod 'AlamofireObjectMapper', '~> 0.7'
   pod 'SwiftDate', '~> 1.0'
+  pod 'Bumblebee', '~> 0.9.2'
+  pod 'TTTAttributedLabel'
 end
 
 target 'KHETests' do
